# contemplative-mcp

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  fly.toml  pyproject.toml
docs/adr/: 0001-no-autonomous-agents-on-social-networks.md  0002-bridge-layer-required-for-mcp-integration.md  0003-stateless-cognitive-engine.md
scripts/: managed_agent.py
src/akc_mcp/: __init__.py  config.py  constitution.py  episode_log.py  identity.py  knowledge.py  llm.py  rules.py  server.py
src/akc_mcp/prompts/: __init__.py  distill_dedup.md  insight_extraction.md  stocktake_rules.md  system.md
src/contemplative_mcp/: __init__.py  config.py  constitution.py  distill.py  episode_log.py  identity.py  insight.py  knowledge.py  llm.py  rules.py  server.py  stocktake.py
src/contemplative_mcp/prompts/: constitution_amend.md  distill_importance.md  stocktake_skills.md
tests/: test_config.py  test_distill.py  test_episode_log.py  test_knowledge.py  test_llm.py
